--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,14 @@ body {
 
 }
 
-#calculator {
-    
+#calcDisplay {
+    border: 2px solid black;
+    height: 50px;
+    padding: 5px;
+
 }
 
-.btn {
+.operator:nth-child() {
 
 }
 
