make calculator prettier

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@ body {
 
 }
 
+#calculator {
+    border: 1px solid red;
+}
+
 #calcDisplay {
     border: 2px solid black;
     height: 50px;
@@ -18,18 +22,16 @@ body {
 }
 
 .calcBtn{
-    display: flex;
-    border
     padding: 1px;
 }
 
-.calcbtn:nth-child(1) {
-    background-color: red;
-}
+/* .btn:nth-child(1) {
+    color: red;
+} */
 
 .btn {
-    display: flex;
-    flex-grow: initial;
+    color: blue;
+    
     margin: 2px;
     padding: 15px;
     border-radius: 15px
