--- a/css/styles.css
+++ b/css/styles.css
@@ -7,37 +7,72 @@ body {
 }
 
 #calculator {
-    border: 1px solid red;
+    display: flex;
+    border: 0;
+    width: 300px;
+    height: 350px;
+    flex-direction: column;
 }
 
 #calcDisplay {
-    border: 2px solid black;
+    background-color: #333333;
+    color: white;
+    border: 0;
     height: 50px;
-    padding: 5px;
+    width: 200px;
+}
 
+#flex {
+    display: flex;
 }
 
 #calcDisplay::before {
     content: "$";
+    color: #77ff33;
+}
+
+#buttonBox{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: black;
+    border: 0;
+    width: 150px;
+    height: 300px;
+}
+
+#operationBtns {
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+    height: 300px;
+    background-color: #1a1a1a;
+}
+
+.operator:nth-child(5){
+    background-color: red;
+    height: 100px;
 }
 
 .calcBtn{
-    padding: 1px;
+    height: 50px;
+    width: 150px;
 }
 
-/* .btn:nth-child(1) {
-    color: red;
-} */
-
-.btn {
-    color: blue;
-    
-    margin: 2px;
-    padding: 15px;
-    border-radius: 15px
+.calcBtn:nth-child(5) {
+    display: flex;
+    flex-wrap: wrap;
+    border: 0;
+    width: 150px;
+    height: 100px;
 }
 
-.operator:nth-child() {
-
+button {
+    background-color: inherit;
+    color: white;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    width: 50px;    
+    height: 50px;
 }
 
