--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body {
 #calcDisplay::before {
     content: "$";
     color: #77ff33;
+    font-size: xx-large;
 }
 
 #buttonBox{
@@ -66,6 +67,7 @@ body {
     height: 100px;
 }
 
+
 button {
     background-color: inherit;
     color: white;
@@ -74,5 +76,14 @@ button {
     border: 0;
     width: 50px;    
     height: 50px;
+}
+
+.operator {
+    font-size: larger;
+}
+
+/* 1-9 keypads */
+.btn {
+    font-size: x-large;
 }
 
