--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,15 @@ body {
 }
 
 #restaurantName {
+    color: blue;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 50px;
+}
 
+#banner {
+    margin-left: auto; 
+    margin-right: auto;
+    height: 200px;
 }
 
 #calculator {
@@ -168,5 +176,5 @@ button {
 }
 
 img {
-    display: none;
+    display: block;
 }
