--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,9 @@ body {
 }
 
 #banner {
-    margin-left: auto; 
-    margin-right: auto;
-    height: 200px;
+    margin-left: 400px; 
+    height: 100px;
+    width: 400px;
 }
 
 #calculator {
@@ -141,10 +141,11 @@ button {
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
+    font-family: 'Roboto Condensed', sans-serif;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     border-radius: 0px 20px 20px 0px;
     z-index: 1;
-    height: 350px;
+    height: auto;
 }
 
 .dropdown-content a {
@@ -155,7 +156,7 @@ button {
 }
 
 .dropdown-content a:hover {
-      background-color: #ddd;
+      background-color: #99e6ff;
       border-radius: 0px 20px 20px 0px;
 }
 
@@ -177,4 +178,23 @@ button {
 
 img {
     display: block;
+}
+
+#addItemToTotal {
+    background-color: #2db300;
+    width: 200px;
+    font-size: x-large;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.price {
+    font-family: 'Roboto Condensed', sans-serif;
+    color: #991f00;
+}
+
+img:last-of-type {
+    height: 400px;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
